# claude-harness

./: .env.example  .gitignore  .run.json  AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_VERIFICATION_REPORT.md  HARNESS-018-COMPLETION-SUMMARY.md  LICENSE  README.md  ROADMAP.md  agent.py  archon_integration.py  claude-progress.txt  client.py  cockpit.py  doc_check.py  events.py  handoff.json  harness.py  lifecycle.py  locking.py  progress.py  prompts.py  pyproject.toml  reconcile.py  requirements-sdk.txt  requirements.txt  rules.py  schema.py  security.py  session.jsonl  state.py  test_doc_check.py  test_security.py
.github/workflows/: tests.yml
docs/: ADR-001-lazy-imports.md  ARCHITECTURE.md  BROWNFIELD_QUICKSTART.md  CLAUDE_AI_WORKFLOW.md  HARNESS_COMMANDER_SPEC.md  architecture_audit_report.md  architecture_decision_001_lazy_imports.md  brownfield_handoff_review.md  final_handoff_v_4_harness_commander.md  gemini_status.md  production_readiness_report.md  report.md  system_state_report.md  testing_strategy.md
docs/proposals/: documentation_trust_protocol.md  (+2 more)
examples/: README.md  brownfield_handoff.json  greenfield_handoff.json  minimal_handoff.json
prompts/: app_spec.txt  brownfield_prompt.md  coding_prompt.md  handoff_to_plan.md  initializer_prompt.md  oidc_identity_spec.txt
tests/: test_agent.py  test_archon_integration.py  test_cli.py  test_doc_check.py  test_events.py  test_integration.py  test_lifecycle.py  test_locking.py  test_orchestrator.py  test_reconcile.py  test_rules.py  test_schema.py  test_state.py  test_ui_capabilities.py
(+2 files in other folders)
